# ceartin-mp

./: .gitattributes  .gitignore  .pre-commit-config.yaml  README.md  main.py  output.csv  output_epitran_tatoeba.csv  pyproject.toml  requirements.txt
bash/: get_phonetic_tatoeba.sh  get_wikipron.sh  setup_data.sh
data/: manual_set.csv  manual_test.csv
results/: output_2026-04-03_00-54_tatoeba_newsph_stress_word_checkpoint-5802_manual.pkl  output_2026-04-03_00-54_tatoeba_newsph_stress_word_checkpoint-5802_tatoeba.pkl  output_2026-04-03_00-54_tatoeba_newsph_stress_word_checkpoint-5802_tatoeba_validation.pkl  output_2026-04-03_00-54_tatoeba_newsph_stress_word_checkpoint-8703_manual.pkl  output_2026-04-03_00-54_tatoeba_newsph_stress_word_checkpoint-8703_tatoeba.pkl  output_2026-04-03_00-54_tatoeba_newsph_stress_word_checkpoint-8703_tatoeba_validation.pkl  output_2026-04-03_00-54_tatoeba_newsph_stress_word_checkpoint-9670_manual.pkl  output_2026-04-03_00-54_tatoeba_newsph_stress_word_checkpoint-9670_tatoeba.pkl  output_2026-04-03_00-54_tatoeba_newsph_stress_word_checkpoint-9670_tatoeba_validation.pkl  output_2026-04-03_05-14_combined-word_checkpoint-4354_manual.pkl  output_2026-04-03_05-14_combined-word_checkpoint-4354_tatoeba.pkl  output_2026-04-03_05-14_combined-word_checkpoint-4354_tatoeba_validation.pkl  output_2026-04-03_05-14_combined-word_checkpoint-5598_manual.pkl  output_2026-04-03_05-14_combined-word_checkpoint-5598_tatoeba.pkl  output_2026-04-03_05-14_combined-word_checkpoint-5598_tatoeba_validation.pkl  output_2026-04-03_05-14_combined-word_checkpoint-6220_manual.pkl  output_2026-04-03_05-14_combined-word_checkpoint-6220_tatoeba.pkl  output_2026-04-03_05-14_combined-word_checkpoint-6220_tatoeba_validation.pkl  output_2026-04-03_11-32_tatoeba_newsph_stress_checkpoint-4266_manual.pkl  output_2026-04-03_11-32_tatoeba_newsph_stress_checkpoint-4266_tatoeba.pkl  (+52 more)
(+74 files in other folders)
